# ChargingGame

./: .gitignore  CLAUDE.md  COMPARE.md  README.md  TODO.md  VERIFY.md  analyze_od_cost_gap.py  analyze_station_placement.py  batch_run.bat  compare_convergence_metrics.py  convert.md  convert_anaheim.py  evaluate_simplification.py  generate_dataset.py  main.py  main_iddpg.py  main_mfddpg.py  od_cost_gap_analysis_berlin_friedrichshain.json  optimize_charging_stations.py  plot_convergence_rate.py  plot_convergence_simple.py  plot_nash_equilibrium_comparison.py  requirements.txt  run_all_experiments.bat  run_comparison.bat  run_experiment.py  run_single_experiment.py  task.md  task_charging_vehicle.md  task_network_simplification.md  test_berlin_simplified.py  test_diagnostics.py  test_ue_convergence.py  verify_simplification.py  visualizer.py
berlin_friedrichshain/: berlin_friedrichshain_demand.csv  berlin_friedrichshain_links.csv  berlin_friedrichshain_nodes.csv  berlin_friedrichshain_settings.json
berlin_friedrichshain_simplified/: demand.csv  settings.json
doc/: PLOT.md  rewrite_uxsim.md  task_ani.md  task_con.md  task_env.md  task_flow.md  task_nash.md  task_network_simplification.md  task_play.md  task_repair.md  task_reward.md  task_tune.md  task_ue.md
history/: analyze_flow_detail.py  analyze_flow_range.py  analyze_flow_scale_experiment.py  analyze_gap_cost_structure.py  analyze_seeds.py  (+48 more)
src/env/uxsimpp_extended/: CMakeLists.txt  __init__.py  debug_test.py  pyproject.toml  test_basic.py  uxsimpp.py
src/env/uxsimpp_extended/trafficpp/: bindings.cpp  traffic.cpp  traffic.h  utils.h
(+66 files in other folders)
